fixing breaking away and becoming invisible of active item in medium profile

--- a/themes/poker/main.css
+++ b/themes/poker/main.css
@@ -184,8 +184,8 @@ div.tb-fix-margin a.LayerClose
 
 #profile-tabs .bottom .inner-item-list img.active
 {
-	width:48px;
-	height:48px;
+	width:45px;
+	height:45px;
 	border:1px solid #810E0B;
 }
 
